# irs-viz-demo

./: README.md  pyproject.toml
src/viz_demo/: app.py  team-measures.feather
